# CATIA

./: .gitignore  ACTUARIAL_METHODOLOGY.md  API_REFERENCE.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  SYSTEM_OVERVIEW.md  TECHNICAL_ARCHITECTURE.md  config.py  example_analysis.py  main.py  pyproject.toml  pytest.ini  requirements.txt
catia/: __init__.py  backtesting.py  config.py  correlation.py  data_acquisition.py  ensemble.py  explainability.py  export.py  extreme_value.py  financial_impact.py  mitigation.py  model_comparison.py  risk_alerts.py  risk_prediction.py  scenario_analysis.py  sensitivity_analysis.py  uncertainty.py  visualization.py
catia/api/: __init__.py  app.py  routes.py  schemas.py
src/: __init__.py  data_acquisition.py  export.py  financial_impact.py  mitigation.py  risk_prediction.py  visualization.py
tests/: __init__.py  test_data_acquisition.py  test_financial_impact.py  test_mitigation.py  test_risk_prediction.py
